--- a/apollo/frontend/templates/frontend/participant_list_with_set.html
+++ b/apollo/frontend/templates/frontend/participant_list_with_set.html
@@ -104,7 +104,11 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
                <td>{{ participant.primary_phone|default('', true) }}</td>
                <td>{{ participant.partner|default('', true) }}</td>
                {% for field in extra_fields %}
+               {%- if participant.extra_data -%}
                <td>{{ participant.extra_data.get(field.name)|default('', true) }}</td>
+               {%- else -%}
+               <td></td>
+               {%- endif -%}
                {% endfor %}
              </tr>
              {% else %}
