Display location set in admin builder and location edit

--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -2,6 +2,7 @@
 {% block stylesheets %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/joint.min.css') }}">
 {% endblock stylesheets %}
+{% block subtitle %}{{ location_set.name }}{% endblock subtitle %}
 {% block toolbar %}
 <div class="btn-group pull-right">
   <form id="save-form" method="POST">
