Added rendering of set with forms and participants

--- a/apollo/frontend/templates/frontend/formbuilder.html
+++ b/apollo/frontend/templates/frontend/formbuilder.html
@@ -2,6 +2,7 @@
 {% block stylesheets %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/angular-form-builder.css') }}">
 {% endblock %}
+{% block subtitle %}{{ form.form_set.name }}{% endblock subtitle %}
 {% block content %}
 <div ng-app="app">
   <div class="row" id="formbuilder" ng-controller="BuilderController" data-form='{{ form_data|tojson }}' data-csrf="{{ csrf_token() }}">
