--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -9,26 +9,27 @@
 a:hover.arrow-style{text-decoration:none; color:#333;}
 .img{margin: 4px 0 0 -6px;}
 .wizard-modal p {
-        margin: 0 0 10px;
-        padding: 0;
-      }
-      .fileUpload {
-        position: relative;
-        overflow: hidden;
-      }
-      .fileUpload input.upload {
-        position: absolute;
-        top: 0;
-        right: 0;
-        margin: 0;
-        padding: 0;
-        font-size: 20px;
-        cursor: pointer;
-        opacity: 0;
-        filter: alpha(opacity=0);
-      }
+  margin: 0 0 10px;
+  padding: 0;
+}
+.fileUpload {
+  position: relative;
+  overflow: hidden;
+}
+.fileUpload input.upload {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  cursor: pointer;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
 </style>
 {% endblock %}
+{% block subtitle %}{{ participant_set.name }}{% endblock subtitle %}
 {% block toolbar %}
   {%- if perms.export_participants.can() -%}
   <a class="btn btn-sm btn-default pull-right" href="{{ url_for('participants.participant_list', export='true') }}"><i class="glyphicon glyphicon-export"></i> {{ _('Export') }}</a>
