--- a/apollo/frontend/templates/admin/macros.html
+++ b/apollo/frontend/templates/admin/macros.html
@@ -29,6 +29,6 @@
 {% macro forms_list(model, column) %}
 <div class="btn-group btn-group-sm" role="group" aria-label="...">
   <a href="javascript:;" class="btn btn-default disabled">{{ model.forms.count() }}</a>
-  <a href="{{ url_for('forms.list_forms', form_set_id=model.id) }}" class="btn btn-default">Manage</a>
+  <a href="{{ url_for('forms.list_forms_with_set', form_set_id=model.id) }}" class="btn btn-default">Manage</a>
 </div>
 {% endmacro %}
