--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -108,14 +108,14 @@
               {%- endif %}
               {#
               {%- if current_menu.submenu('user.locations_builder').visible or current_menu.submenu('user.locations_list').visible or current_menu.submenu('user.forms').visible %}
-                <li class="divider"></li>
               {%- endif %}
               {%- if current_menu.submenu('user.locations_builder').visible %}
                 <li><a href="{{ current_menu.submenu('user.locations_builder').url }}"><i class="glyphicon glyphicon-map-marker"></i> {{ current_menu.submenu('user.locations_builder').text }}</a></li>
-              {%- endif %}
+              {%- endif %}#}
+                <li class="divider"></li>
               {%- if current_menu.submenu('user.forms').visible -%}
                 <li><a href="{{ current_menu.submenu('user.forms').url }}"><i class="glyphicon glyphicon-list-alt"></i> {{ current_menu.submenu('user.forms').text }}</a></li>
-              {%- endif %}
+              {%- endif %}{#
               {%- if current_menu.submenu('user.locations_builder').visible or current_menu.submenu('user.formbuilder').visible %}
               {%- endif -%}
               #}
