--- a/apollo/frontend/templates/frontend/form_edit_with_set.html
+++ b/apollo/frontend/templates/frontend/form_edit_with_set.html
@@ -1,10 +1,10 @@
 {% extends 'frontend/_layout.html' %}
-{%- from 'frontend/macros/form_edit_form.html' import render_edit_form -%}
+{%- from 'frontend/macros/form_edit_form.html' import render_edit_form_with_set -%}
 {% block subtitle %}{{ form_set.name }}{% endblock subtitle %}
 {% block content %}
 <div class="row">
 <div class="col-md-8 col-md-offset-2">
-{{ render_edit_form(form) }}
+{{ render_edit_form_with_set(form, form_set_id) }}
 </div>
 </div>
 {% endblock %}
