--- a/apollo/frontend/templates/frontend/form_list.html
+++ b/apollo/frontend/templates/frontend/form_list.html
@@ -96,28 +96,27 @@
         </div>
       </div>
     </form>
-    <div class="modal fade" id="formImportModal" role="dialog" aria-labelledby="formImportModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="formImportModalLabel">{{ _('Import form') }}</h4>
-          </div>
-          <div class="modal-body">
-            <form action="{{ url_for('forms.import_form_schema') }}" enctype="multipart/form-data" method="post">
-              {{ form_import_form.hidden_tag() }}
-              <div class="form-group">
-                {{ form_import_form.import_file }}
-              </div>
-              <div class="form-group">
-                <button class="btn btn-primary">{{ _('Import') }}</button>
-                <button class="btn btn-default" data-dismiss="modal">{{ _('Close') }}</button>
-              </div>
-            </form>
+    <form action="{{ url_for('forms.import_form_schema') }}" enctype="multipart/form-data" method="post">
+      <div class="modal fade" id="formImportModal" role="dialog" aria-labelledby="formImportModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <h4 class="modal-title" id="formImportModalLabel">{{ _('Import Form') }}</h4>
+            </div>
+            <div class="modal-body">
+              {{ form_import_form.hidden_tag() }} {{ form_import_form.import_file }}
+            </div>
+            <div class="modal-footer">
+              <button class="btn btn-primary">{{ _('Import') }}</button>
+              <button class="btn btn-default" data-dismiss="modal">{{ _('Close') }}</button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </form>
   </div>
 </div>
 {% endblock %}
