--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -29,31 +29,36 @@
       </div>
       <form role="form" class="form-horizontal">
       <div class="modal-body" style="padding-bottom:5px">
-          <div class="form-group">
-            <label for="name" class="col-sm-2 control-label">{{ _('Name') }}</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="addDivisionName">
+        <div class="form-group">
+          <label for="name" class="col-sm-2 control-label">{{ _('Name') }}</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="addDivisionName">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="parents" class="col-sm-2 control-label">{{ _('Parents') }}</label>
+          <div class="col-sm-10">
+            <select multiple="multiple" class="form-control" name="parents" id="addDivisionParents">
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-10 col-sm-offset-2">
+            <div class="checkbox">
+              <label for="addDivisionAdministrative">
+                <input type="checkbox" name="is_administrative" id="addDivisionAdministrative" value="true" /> {{ _('Administrative division') }}
+              </label>
+            </div>
+            <div class="checkbox">
+              <label for="addDivisionPolitical">
+                <input type="checkbox" name="is_political" id="addDivisionPolitical" value="true" /> {{ _('Political division') }}
+              </label>
             </div>
           </div>
-          <div class="form-group">
-            <label for="parents" class="col-sm-2 control-label">{{ _('Parents') }}</label>
-            <div class="col-sm-10">
-              <select multiple="multiple" class="form-control" name="parents" id="addDivisionParents">
-              </select>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-10 col-sm-offset-2">
-              <div class="checkbox">
-                <label for="addDivisionAdministrative">
-                  <input type="checkbox" name="is_administrative" id="addDivisionAdministrative" value="true" /> {{ _('Administrative division') }}
-                </label>
-              </div>
-              <div class="checkbox">
-                <label for="addDivisionPolitical">
-                  <input type="checkbox" name="is_political" id="addDivisionPolitical" value="true" /> {{ _('Political division') }}
-                </label>
-              </div>
+        </div>
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
               <div class="panel-group" id="accordion-add" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default">
                   <div class="panel-heading" role="tab" id="add-heading">
@@ -72,6 +77,7 @@
               </div>
             </div>
           </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">{{ _('Close') }}</button>
@@ -116,17 +122,23 @@
                 <input type="checkbox" name="is_political" id="updateDivisionPolitical" value="true" /> {{ _('Political division') }}
               </label>
             </div>
-            <div class="panel-group" id="accordion-update" role="tablist" aria-multiselectable="true">
-              <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="update-heading">
-                  <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="accordion-update" aria-expanded="true" aria-controls="update-extra-options" href="#update-extra-options">More options</a></h4>
-                </div>
-                <div id="update-extra-options" class="panel-collapse collapse" role="tabpanel" aria-labelledby="update-heading">
-                  <div class="panel-body">
-                    <div class="checkbox">
-                      <label for="updateDivisionRegisteredVoters">
-                        <input type="checkbox" name="has_registered_voters" id="updateDivisionRegisteredVoters" value="true" /> {{ _('Has registered voters') }}
-                      </label>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+              <div class="panel-group" id="accordion-update" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="update-heading">
+                    <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="accordion-update" aria-expanded="true" aria-controls="update-extra-options" href="#update-extra-options">More options</a></h4>
+                  </div>
+                  <div id="update-extra-options" class="panel-collapse collapse" role="tabpanel" aria-labelledby="update-heading">
+                    <div class="panel-body">
+                      <div class="checkbox">
+                        <label for="updateDivisionRegisteredVoters">
+                          <input type="checkbox" name="has_registered_voters" id="updateDivisionRegisteredVoters" value="true" /> {{ _('Has registered voters') }}
+                        </label>
+                      </div>
                     </div>
                   </div>
                 </div>
