--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -167,8 +167,8 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
           <div class="modal-footer">
             <form action="{{ url_for('participants.nuke_participants') }}" method="POST">
               <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button class="btn btn-danger" disabled="true" id="confirm_nuke">Yes, I understand</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal">{{ _('Close') }}</button>
+              <button class="btn btn-danger" disabled="true" id="confirm_nuke">{{ _('Yes, I understand') }}</button>
             </form>
           </div>
         </div>
@@ -179,16 +179,11 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
     <div class="wizard" id="import-wizard" data-title="Import Participants">
       <!-- Step 1 -->
       <div class="wizard-card" data-cardname="uploadFile">
-        <h3>Upload File</h3>
+        <h3>{{ _('Upload File') }}</h3>
         <div class="wizard-input-section">
         <form enctype="multipart/form-data" method="POST" id="upload-form" action="{{ url_for('participants.participant_list_import') }}"><input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
           <div class="form-group">
             <div class="col-sm-9">
-              <div class="row">
-                <div class="col-sm-12">
-                  <p class="help-block">Please select a CSV file, or an Excel spreadsheet</p>
-                </div>
-              </div>
               <div class="row">
                 <div class="col-sm-4">
                   <div class="fileUpload btn btn-default btn-sm" style="margin-left:1px;">
@@ -199,6 +194,7 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
                 </div>
                 <div class="col-sm-8" style="margin-left:-30px;">
                   <input id="uploadFile" type="text" placeholder="Data File" class="form-control input-sm" readonly>
+                  <p class="help-block"><small>{{ _('(only .csv, .xls and .xlsx files)') }}</small></p>
                 </div>
               </div>
             </div>
