--- a/apollo/frontend/templates/frontend/participant_list_with_set.html
+++ b/apollo/frontend/templates/frontend/participant_list_with_set.html
@@ -163,8 +163,8 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
           <div class="modal-footer">
             <form action="{{ url_for('participants.nuke_participants') }}" method="POST">
               <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button class="btn btn-danger" disabled="true" id="confirm_nuke">Yes, I understand</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal">{{ _('Close') }}</button>
+              <button class="btn btn-danger" disabled="true" id="confirm_nuke">{{ _('Yes, I understand') }}</button>
             </form>
           </div>
         </div>
@@ -181,11 +181,6 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
           <div class="form-group">
             <div class="col-sm-9">
               <div class="row">
-                <div class="col-sm-12">
-                  <p class="help-block">Please select a CSV file, or an Excel spreadsheet</p>
-                </div>
-              </div>
-              <div class="row">
                 <div class="col-sm-4">
                   <div class="fileUpload btn btn-default btn-sm" style="margin-left:1px;">
                     <span>Browse</span>
@@ -195,6 +190,9 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
                 </div>
                 <div class="col-sm-8" style="margin-left:-30px;">
                   <input id="uploadFile" type="text" placeholder="Data File" class="form-control input-sm" readonly>
+                  <p class="help-block">
+                    <small>{{ _('(only .csv, .xls and .xlsx files)') }}</small>
+                  </p>
                 </div>
               </div>
             </div>
