fix: proper capitalization of display strings
see: #37

--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -46,12 +46,12 @@
           <div class="col-sm-10 col-sm-offset-2">
             <div class="checkbox">
               <label for="addDivisionAdministrative">
-                <input type="checkbox" name="is_administrative" id="addDivisionAdministrative" value="true" /> {{ _('Administrative division') }}
+                <input type="checkbox" name="is_administrative" id="addDivisionAdministrative" value="true" /> {{ _('Administrative Division') }}
               </label>
             </div>
             <div class="checkbox">
               <label for="addDivisionPolitical">
-                <input type="checkbox" name="is_political" id="addDivisionPolitical" value="true" /> {{ _('Political division') }}
+                <input type="checkbox" name="is_political" id="addDivisionPolitical" value="true" /> {{ _('Political Division') }}
               </label>
             </div>
           </div>
@@ -62,13 +62,13 @@
               <div class="panel-group" id="accordion-add" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default">
                   <div class="panel-heading" role="tab" id="add-heading">
-                    <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="accordion-add" aria-expanded="true" aria-controls="add-extra-options" href="#add-extra-options">More options</a></h4>
+                    <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="accordion-add" aria-expanded="true" aria-controls="add-extra-options" href="#add-extra-options">{{ _('More Options') }}</a></h4>
                   </div>
                   <div id="add-extra-options" class="panel-collapse collapse" role="tabpanel" aria-labelledby="add-heading">
                     <div class="panel-body">
                       <div class="checkbox">
                         <label for="addDivisionRegisteredVoters">
-                          <input type="checkbox" name="has_registered_voters" id="addDivisionRegisteredVoters" value="true" /> {{ _('Has registered voters') }}
+                          <input type="checkbox" name="has_registered_voters" id="addDivisionRegisteredVoters" value="true" /> {{ _('Has Registered Voters') }}
                         </label>
                       </div>
                     </div>
@@ -114,12 +114,12 @@
           <div class="col-sm-10 col-sm-offset-2">
             <div class="checkbox">
               <label for="updateDivisionAdministrative">
-                <input type="checkbox" name="is_administrative" id="updateDivisionAdministrative" value="true" /> {{ _('Administrative division') }}
+                <input type="checkbox" name="is_administrative" id="updateDivisionAdministrative" value="true" /> {{ _('Administrative Division') }}
               </label>
             </div>
             <div class="checkbox">
               <label for="updateDivisionPolitical">
-                <input type="checkbox" name="is_political" id="updateDivisionPolitical" value="true" /> {{ _('Political division') }}
+                <input type="checkbox" name="is_political" id="updateDivisionPolitical" value="true" /> {{ _('Political Division') }}
               </label>
             </div>
           </div>
@@ -130,13 +130,13 @@
               <div class="panel-group" id="accordion-update" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default">
                   <div class="panel-heading" role="tab" id="update-heading">
-                    <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="accordion-update" aria-expanded="true" aria-controls="update-extra-options" href="#update-extra-options">More options</a></h4>
+                    <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="accordion-update" aria-expanded="true" aria-controls="update-extra-options" href="#update-extra-options">{{ _('More Options') }}</a></h4>
                   </div>
                   <div id="update-extra-options" class="panel-collapse collapse" role="tabpanel" aria-labelledby="update-heading">
                     <div class="panel-body">
                       <div class="checkbox">
                         <label for="updateDivisionRegisteredVoters">
-                          <input type="checkbox" name="has_registered_voters" id="updateDivisionRegisteredVoters" value="true" /> {{ _('Has registered voters') }}
+                          <input type="checkbox" name="has_registered_voters" id="updateDivisionRegisteredVoters" value="true" /> {{ _('Has Registered Voters') }}
                         </label>
                       </div>
                     </div>
