feat: clicking the admin division brings up edit dialog
As opposed to using a double click event, this uses a
regular click event to bring up the admin division
edit dialog. It knows to ignore click and move events.

See: #34

--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -194,8 +194,8 @@
 </div>
 {%- endif -%}
 <div class="row">
-  <div class="col-md-10 col-md-offset-1">
-    <div id="paper" style="margin-top: 5em; border: 1px solid #000;" data-graph='{{ location_set.make_admin_divisions_graph()|tojson }}'></div>
+  <div class="col-md-12">
+    <div id="paper" style="margin-top: 5em" data-graph='{{ location_set.make_admin_divisions_graph()|tojson }}'></div>
   </div>
 </div>
 {% endblock content %}
